welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:18: error: ')' expected but ';' found.
	else (gauche(); compteur=0; avance();)
                      ^Poucet:18: error: illegal start of statement
	else (gauche(); compteur=0; avance();)
                                             ^